# BlogCore

./: .env.tmp  .gitignore  README.md  pyproject.toml  run.py  setup.bat
app/: __init__.py  llm_clients.py  routes.py  services.py  utils.py
app/prompts/: generate_article_prompt.txt  generate_brief_prompt.txt  suggest_headings_prompt.txt
app/static/css/: style.css
app/templates/: article_generator.html  article_result.html  brief.html  brief_result.html  index.html  keyword_suggester.html  result.html
